k8s/todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: your-k8s-host.local
      http:
        paths:
          - path: /signup
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /login
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /tasks
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 5000
          - path: /deadlines
            pathType: ImplementationSpecific
            backend:
              service:
                name: deadline-service
                port:
                  number: 6001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
